force-app/main/default/objects/GenAiFunctionDefinition_Home__dll/fields/IsIncludeInProgressIndicator__c.field-meta.xml
<CustomField>
    <fullName>IsIncludeInProgressIndicator__c</fullName>
    <label>IsIncludeInProgressIndicator</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>IsIncludeInProgressIndicator</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>