force-app/main/default/objects/GenAiFunctionDefinition_Home__dll/fields/PluginId__c.field-meta.xml
<CustomField>
    <fullName>PluginId__c</fullName>
    <label>Plugin</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>PluginId</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>