force-app/main/default/objects/GenAiFunctionDefinition_Home__dll/fields/ProgressIndicatorMessage__c.field-meta.xml
<CustomField>
    <fullName>ProgressIndicatorMessage__c</fullName>
    <label>ProgressIndicatorMessage</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>ProgressIndicatorMessage</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>